--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -421,9 +421,9 @@
                    <a>
                     En este procedimiento el alumno solicita cambiar a una carrera diferente de la que inició, para realizar el trámite se necesita el formato de cambio de carrera firmado y el pago por la gestión del trámite con costo de $1500.<br/><br/>
 
-                    Si ya cuentas con avance curricular y la nueva carrera tiene materias que ya cursaste se hará una equivalencia interna y no tendrás que cursarlas nuevamente.<br/><br/>
+                    Si ya cuenta con avance curricular y la nueva carrera tiene materias que ya cursaste se hará una equivalencia interna y no tendrá que cursarlas nuevamente.<br/><br/>
 
-                    Para iniciar el trámite realiza tu pago en trámites en línea en la página de siu-utl.scalahed.com  y manda tu formato a tu tutor.<br/><br/>
+                    Para iniciar el trámite el alumno realiza el pago en trámites en línea en la página de siu-utl.scalahed.com y manda su formato a su tutor.<br/><br/>
 
                     Nota: La solicitud de cambio de carrera se debe realizar 2 semanas antes del inicio del bimestre.<br/><br/>
                   </a>
@@ -437,10 +437,10 @@
                     <br/>
                     
                     <a>
-                      Primero debes entrar a siu-utl.scalahed.com<br/>
-                      En el apartado de "Programas inscritos" en la parte inferior encontrarás la opción de avance curricular.<br/>
+                      Primero debe entrar a siu-utl.scalahed.com<br/>
+                      En el apartado de "Programas inscritos" en la parte inferior encontrará la opción de avance curricular.<br/>
                       <img src="img/busqueda/avance.png" alt=""><br/>
-                      En el mismo apartado también encontrarás tu historial académico, las calificaciones se actualizan aproximadamente 2 semanas después del cierre del aula virtual.
+                      En el mismo apartado también encontrará su historial académico, las calificaciones se actualizan aproximadamente 2 semanas después del cierre del aula virtual.
                     </a>
                 </div>
 
@@ -456,19 +456,19 @@
 
                       Requisitos para la jornada Super intensiva<br/>
 
-                      -Aplica para alumnos inscritos a partir del 2018.<br/>
+                      ● Aplica para alumnos inscritos a partir del 2018.<br/>
 
-                      -Tener promedio mayor a 8 en Bachillerato.<br/>
+                      ● Tener promedio mayor a 8 en Bachillerato.<br/>
 
-                      -Documentación original y digital completa.<br/>
+                      ● Documentación original y digital completa.<br/>
 
-                      -No tener materias reprobadas y tener los pagos al corriente (en caso de tener avance curricular)<br/>
+                      ● No tener materias reprobadas y tener los pagos al corriente (en caso de tener avance curricular)<br/>
 
-                      -Domiciliando se obtiene el 5% de descuento adicional.<br/>
+                      ● Domiciliando se obtiene el 5% de descuento adicional.<br/>
 
-                      -En caso de tener promedio inferior a 8 en Bachillerato pueden ingresar a esta jornada realizando un pago anual.<br/>
+                      ● En caso de tener promedio inferior a 8 en Bachillerato pueden ingresar a esta jornada realizando un pago anual.<br/>
 
-                      -Para alumnos de nuevo ingreso iniciarán con 2 materias por bimestre, a partir del tercer cuatrimestre (6o bimestre) tendrán 4 materias por bimestre.<br/>
+                      ● Para alumnos de nuevo ingreso iniciarán con 2 materias por bimestre, a partir del tercer cuatrimestre (6o bimestre) tendrán 4 materias por bimestre.<br/>
 
                       Nota: Esta jornada no cubre el pago de asistencia, título, cédula e inglés,  en caso de que su esquema de pago actual lo cubra al cambiarse los perderá, se debe revisar con Finanzas para saber si habrá ajuste por estos conceptos.<br/>
                     </a>
@@ -480,13 +480,13 @@
 
                     <br/>
 
-                    <a>
+
                       1.- Para acceder al sistema ingresa la liga siu-utl.scalahed.com<br/>
                       2.-Ingresa la matrícula y contraseña que se te hizo llegar por correo<br/>
                       3.-Solo al ingresar por primera vez, el sistema te pedirá actualizar tu contraseña. (Debe ser alfanumérica, contener mínimo 6, máximo 8 dígitos  y sin caracteres especiales)<br/>
                       4.-Al realizar este proceso podrás acceder al sistema<br/>
                       A continuación encontrarás un video tutorial de la información a la que tendrás acceso en SIU.<br/>
-                    </a>
+                    
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="">
