--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -27,69 +27,65 @@
             <div class="subcontenedor">
               <!--Titulación-->   
               <div class="bloque activo" id="bloquePreguntasFrecuentesTitulacion">
-                  <h4><b>Preguntas frecuentes titulación</b></h4></br>
+                <div class="pf card border-0 py-3 px-3" id="spsuctsss" >
 
+                <h6><b>¿Se puede solicitar un certificado total sin servicio social?</b></h6>
+                <a>
+                  Se puede trabajar el certificado total siempre y cuando se cumpla con:
+                  <br/><br/>
+                  -Documentación digital completa.<br/>
+                  -Pago de documento o colegiatura final.<br/>
+                  -Avance curricular  con el 100% y estatus de egresado.
+                  <br/><br/>
+                  El trámite de titulación quedará pausado hasta la liberación del servicio social, posteriormente el egresado  se tiene que comunicar para solicitar seguimiento.
+                </a>
 
-                  <div class="pf card border-0 py-3 px-3" id="spsuctsss" >
+                </div>
 
-                  <h6><b>¿Se puede solicitar un certificado total sin servicio social?</b></h6>
-                  <a>
-                    Se puede trabajar el certificado total siempre y cuando se cumpla con:
-                    <br/><br/>
-                    -Documentación digital completa.<br/>
-                    -Pago de documento o colegiatura final.<br/>
-                    -Avance curricular  con el 100% y estatus de egresado.
-                    <br/><br/>
-                    El trámite de titulación quedará pausado hasta la liberación del servicio social, posteriormente el egresado  se tiene que comunicar para solicitar seguimiento.
-                  </a>
+                <div class="pf card border-0 py-3 px-3" id="ctdetdt" >
 
-                  </div>
+                <h6><b>¿Cuánto tiempo dura el trámite de titulación?</b></h6>
+                <a>
+                  El trámite dura un tiempo estimado de 8 meses. En ocasiones se puede extender por situaciones internas o externas.
+                </a>
 
-                  <div class="pf card border-0 py-3 px-3" id="ctdetdt" >
+                </div>
 
-                  <h6><b>¿Cuánto tiempo dura el trámite de titulación?</b></h6>
-                  <a>
-                    El trámite dura un tiempo estimado de 8 meses. En ocasiones se puede extender por situaciones internas o externas.
-                  </a>
+                <div class="pf card border-0 py-3 px-3" id="qdenpetdt" >
 
-                  </div>
+                <h6><b>¿Qué documentación es necesaria para el trámite de titulación?</b></h6>
+                <a>
+                  Lo ideal es que el alumno tenga toda la documentación completa, no obstante, la documentación obligatoria es:
+                  <br/><br/>
+                  Antecedentes académicos (certificado de estudios). <br/>
+                  Título (maestrías y doctorados). <br/>
+                  Acta de nacimiento. <br/>
+                  CURP.
+                </a>
 
-                  <div class="pf card border-0 py-3 px-3" id="qdenpetdt" >
+                </div>
 
-                  <h6><b>¿Qué documentación es necesaria para el trámite de titulación?</b></h6>
-                  <a>
-                    Lo ideal es que el alumno tenga toda la documentación completa, no obstante, la documentación obligatoria es:
-                    <br/><br/>
-                    Antecedentes académicos (certificado de estudios). <br/>
-                    Título (maestrías y doctorados). <br/>
-                    Acta de nacimiento. <br/>
-                    CURP.
-                  </a>
+                <div class="pf card border-0 py-3 px-3" id="ceecdpdt" >
 
-                  </div>
+                <h6><b>¿Cuál es el costo de la colegiatura final?</b></h6>
+                <a>
+                  El pago de la colegiatura final tiene un costo de $15,000.00 pesos mexicano Hay ocasiones en que el costo puede cambiar por alguna promoción o bien se tiene incluido en el paquete de inscripción.
+                </a>
 
-                  <div class="pf card border-0 py-3 px-3" id="ceecdpdt" >
+                </div>
 
-                  <h6><b>¿Cuál es el costo de la colegiatura final?</b></h6>
-                  <a>
-                    El pago de la colegiatura final tiene un costo de $15,000.00 pesos mexicano Hay ocasiones en que el costo puede cambiar por alguna promoción o bien se tiene incluido en el paquete de inscripción.
-                  </a>
+                <div class="pf card border-0 py-3 px-3" id="qhsuanqrtdmam" >
 
-                  </div>
+                <h6><b>¿Qué hacer si un alumno no quiere realizar el trámite de cambio de programa de máster a maestría?</b></h6>
+                <a>
+                  Se informará al alumno que solo obtendrá un diploma con valor curricular. Solo con el cambio de programa a Maestría podrá obtener un grado académico
+                </a>
 
-                  <div class="pf card border-0 py-3 px-3" id="qhsuanqrtdmam" >
-
-                  <h6><b>¿Qué hacer si un alumno no quiere realizar el trámite de cambio de programa de máster a maestría?</b></h6>
-                  <a>
-                    Se informará al alumno que solo obtendrá un diploma con valor curricular. Solo con el cambio de programa a Maestría podrá obtener un grado académico
-                  </a>
-
-                  </div>
+                </div>
               </div>
 
               <!--ServicioSocial-->   
               <div class="bloque" id="bloquePreguntasFrecuentesServicioSocial">
-                <h4><b>Preguntas frecuentes servicio social</b></h4></br>
          
                 <div class="pf card border-0 py-3 px-3" id="RequisitosSS" >
 
@@ -283,11 +279,6 @@
 
               <!--ControlDocumental-->   
               <div class="bloque" id="bloquePreguntasFrecuentesControlDocumental">
-                <div class="card border-0 py-3 px-3" id="Preguntasprueba" >
-                  
-                  
-                  
-
                   <div class="pf card border-0 py-3 px-3" id="" >
                     
                     <h6><b>¿Qué es una dictaminación de un documento?</b></h6>
@@ -343,22 +334,16 @@
     
                         <img src="img/busqueda/curp.png" alt=""><br/><br/>
 
-                        En caso de que el alumno realice este trámite posterior a la titulación es necesario realizar la corrección de sus documentos ya que no podrá tramitar su Cédula en la plataforma de la SEP, Lo primero que se tiene que identificar que CURP tiene su documentación oficial, en caso de ser incorrecto deberá cubrir el costo de corrección de documentos desde la plataforma SIU (Es un trámite por cada documento)
+                        En caso de que el alumno realice este trámite posterior a la titulación es necesario realizar la corrección de sus documentos ya que no podrá tramitar su Cédula en la plataforma de la SEP, Lo primero que se tiene que identificar que CURP tiene su documentación oficial, en caso de ser incorrecto deberá cubrir el costo de corrección de documentos desde la plataforma SIU (Es un trámite por cada documento).
                       </a>    
 
                   </div>
-
-                  
-
-              </div>
-                
-                
               </div>  
 
               <!--Escolares-->
               <div class="bloque" id="bloquePreguntasFrecuentesEscolares">
 
-                 <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="">
                     
                     <h6><b>Constancia de estudios</b></h6>
 
@@ -377,37 +362,62 @@
                       Nota: Si realiza su pago en línea la solicitud será creada en automático, el trámite tiene una duración de 4 a 10 días hábiles aproximadamente.<br/><br/>
                       En ambos casos se recomienda dar aviso al área de tutoría para el seguimiento.<br/>
 
-                  </div>
+                </div>
 
-                  <div class="pf card border-0 py-3 px-3" id="">
-                        
-                      <h6><b>Documentos para revalidación - Lic.</b></h6>
+                <div class="pf card border-0 py-3 px-3" id="">
+                      
+                    <h6><b>Documentos para revalidación.</b></h6>
 
-                      <br/>
+                      Para alumnos con bachillerato en el extranjero es necesario realizar trámite de Revalidación sí es que aun no tiene Resolución de Revalidación de bachillerato.<br/><br/>
 
-                      <a>
-                        Para alumnos con bachillerato en el extranjero es necesario realizar trámite de Revalidación sí es que aun no tiene Resolución de Revalidación de bachillerato.<br/><br/>
+                      Los documentos en físico que necesitamos para dar de alta en SEP al alumno son:<br/>
 
-                        Los documentos en físico que necesitamos para dar de alta en SEP al alumno son:<br/>
+                      Acta de nacimiento original si tu documento fue emitido en el extranjero debe tener apostilla o legalización.<br/>
 
-                        Acta de nacimiento original si tu documento fue emitido en el extranjero debe tener apostilla o legalización.<br/>
+                      ● Resolución de Revalidación de bachillerato emitido por la Secretaría de Educación Pública. <br/>
+                      ● Copia de identificación (INE o Pasaporte)<br/>
+                      En caso de no tener *Resolución de Revalidación es necesario proporcionar para trámite.<br/>
+                      ● Certificado o diploma de bachillerato o equivalente legalizado o apostillado.<br/>
+                      ● Historia académica (tira de materias con calificaciones obtenidas)<br/>
+                      ● Plan de estudio de bachiller<br/>
+                      ● Carta poder llena con firma autógrafa.<br/>
+                      En caso de que los documentos sean en idioma diferente al español, traducción de Perito traductor.<br/>
+                      ● Realizar pago gestión de trámite $3,000.00<br/>
+                      ● Copia de identificación (INE o Pasaporte)<br/><br/>
 
-                        ● Resolución de Revalidación de bachillerato emitido por la Secretaría de Educación Pública. <br/>
-                        ● Copia de identificación (INE o Pasaporte)<br/>
-                        En caso de no tener *Resolución de Revalidación es necesario proporcionar para trámite.<br/>
-                        ●Certificado o diploma de bachillerato o equivalente legalizado o apostillado.<br/>
-                        ●Historia académica (tira de materias con calificaciones obtenidas)<br/>
-                        ●Plan de estudio de bachiller<br/>
-                        ●Carta poder llena con firma autógrafa.<br/>
-                        En caso de que los documentos sean en idioma diferente al español, traducción de Perito traductor.<br/>
-                        ●Realizar pago gestión de trámite $3,000.00<br/>
-                        ●Copia de identificación (INE o Pasaporte)<br/><br/>
+                      El pago lo realiza en la página de siu-utl.scalahed.com en la etiqueta de tramites en línea, si realiza el pago por otro medio el alumno solicita el trámite a tutoría enviando su comprobante de pago.
 
-                        El pago lo realiza en la página de siu-utl.scalahed.com en la etiqueta de tramites en línea, si realiza el pago por otro medio el alumno solicita el trámite a tutoría enviando su comprobante de pago.<br/><br/>
-                      </a>
-                  </div>
+                </div>
 
-                  
+                <div class="pf card border-0 py-3 px-3" id="">
+                      
+                  <h6><b>¿Se puede agregar a una constancia de termino algo referente a la titulación?</b></h6>
+
+                  Se puede agregar una leyenda referente a que la titulación del alumno esta en curso, siempre y cuando el alumno cuente con los requisitos y cuente con el certificado total emitido (el primer documento de la titulación.
+                  <br/><br/>
+                  Primero el alumno tiene que solicitar el documento y posterior el apoyo para agregarle la leyenda.
+
+                </div>
+
+                <div class="pf card border-0 py-3 px-3" id="">
+                      
+                  <h6><b>Alumno no recibe documento solicitado</b></h6>
+
+                  Primero tenemos que verificar que en el apartado de documentos QR emitidos dentro de SIU, en caso de que el documento ya se encuentre elaborado, verificar si el correo del alumno en la plataforma es correcto.
+                  <br/><br/>
+                  En caso de que sea correcto verificar si no se encuentra en no deseados o spam dentro de su correo, si el alumno indica que no lo tiene, se deberá solicitar el reenvío del documento.
+
+                </div>
+
+                <div class="pf card border-0 py-3 px-3" id="">
+                      
+                  <h6><b>Se puede solicitar un documento en físico</b></h6>
+
+                  Si, se puede solicitar la elaboración de la documentación que emite escolares en físico, siempre y cuando el documento que se solicitó no este incluido en algún paquete o promoción ya que estos documentos solo se entregan en digital.
+                  <br/><br/>
+                  En caso de que el alumno requiera el documento en físico tendrá que cubrir el monto en su plataforma.
+                 
+                </div>
 
               </div>
 
@@ -417,7 +427,6 @@
                 <div class="pf card border-0 py-3 px-3" id="">
                   
                   <h6><b>¿Cómo realizo un cambio de Licenciatura?</b></h6>
-                  <br/>
                    <a>
                     En este procedimiento el alumno solicita cambiar a una carrera diferente de la que inició, para realizar el trámite se necesita el formato de cambio de carrera firmado y el pago por la gestión del trámite con costo de $1500.<br/><br/>
 
@@ -429,28 +438,21 @@
                   </a>
                 </div>
 
-
-
                 <div class="pf card border-0 py-3 px-3" id="">
                     
-                    <h6><b>¿Cómo puedo ver el avance curricular?</b></h6>
-                    <br/>
-                    
-                    <a>
-                      Primero debe entrar a siu-utl.scalahed.com<br/>
-                      En el apartado de "Programas inscritos" en la parte inferior encontrará la opción de avance curricular.<br/>
-                      <img src="img/busqueda/avance.png" alt=""><br/>
-                      En el mismo apartado también encontrará su historial académico, las calificaciones se actualizan aproximadamente 2 semanas después del cierre del aula virtual.
-                    </a>
+                  <h6><b>¿Cómo puedo ver el avance curricular?</b></h6>
+                  
+                    Primero debe entrar a siu-utl.scalahed.com<br/>
+                    En el apartado de "Programas inscritos" en la parte inferior encontrará la opción de avance curricular.<br/>
+                    <img src="img/busqueda/avance.png" alt=""><br/>
+                    En el mismo apartado también encontrará su historial académico, las calificaciones se actualizan aproximadamente 2 semanas después del cierre del aula virtual.
+
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="">
                     
                     <h6><b>Requisitos de la jornada Super intensiva para Licenciatura</b></h6>
-
-                    <br/>
-
-                    <a>
+                   
                       La duración de la Licenciatura en Jornada Super Intensiva es de 2 años 2 meses.<br/>
                       Para Derecho la duración de la Licenciatura es de 2 años 8 meses.<br/>
 
@@ -471,39 +473,31 @@
                       ● Para alumnos de nuevo ingreso iniciarán con 2 materias por bimestre, a partir del tercer cuatrimestre (6o bimestre) tendrán 4 materias por bimestre.<br/>
 
                       Nota: Esta jornada no cubre el pago de asistencia, título, cédula e inglés,  en caso de que su esquema de pago actual lo cubra al cambiarse los perderá, se debe revisar con Finanzas para saber si habrá ajuste por estos conceptos.<br/>
-                    </a>
+                    
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="">
                     
-                    <h6><b>¿Cómo ingreso al Sistema de Información Universitaria (SIU)?</b></h6>
+                  <h6><b>¿Cómo ingreso al Sistema de Información Universitaria (SIU)?</b></h6>
 
-                    <br/>
-
-
-                      1.- Para acceder al sistema ingresa la liga siu-utl.scalahed.com<br/>
-                      2.-Ingresa la matrícula y contraseña que se te hizo llegar por correo<br/>
-                      3.-Solo al ingresar por primera vez, el sistema te pedirá actualizar tu contraseña. (Debe ser alfanumérica, contener mínimo 6, máximo 8 dígitos  y sin caracteres especiales)<br/>
-                      4.-Al realizar este proceso podrás acceder al sistema<br/>
-                      A continuación encontrarás un video tutorial de la información a la que tendrás acceso en SIU.<br/>
-                    
+                    1.- Para acceder al sistema ingresa la liga siu-utl.scalahed.com<br/>
+                    2.-Ingresa la matrícula y contraseña que se te hizo llegar por correo<br/>
+                    3.-Solo al ingresar por primera vez, el sistema te pedirá actualizar tu contraseña. (Debe ser alfanumérica, contener mínimo 6, máximo 8 dígitos  y sin caracteres especiales)<br/>
+                    4.-Al realizar este proceso podrás acceder al sistema<br/>
+                    A continuación encontrarás un video tutorial de la información a la que tendrás acceso en SIU.<br/>
+                  
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="">
                     
                     <h6><b>Pago de incorporación SEP</b></h6>
 
-                    <br/>
-
-                    <a>
                       Como normativa de la Secretaría de Educación Pública, cada fin de cuatrimestre se deben validar los estudios ante la Dirección General de Acreditación, Incorporación y Revalidación.<br/>
 
                       Para efectuar la gestión es necesario realizar el pago de incorporación que tiene un costo de $700 en licenciaturas y $800 en maestrías, deberá ser efectuado dentro de los 30 días siguientes al inicio del ciclo escolar. <br/>
 
                       Dicha normativa se encuentra en el acuerdo número 279 por el que se establecen los trámites y procedimientos relacionados con el reconocimiento de validez oficial de estudios del tipo superior.<br/>
-                    </a>
                 </div>
-
 
               </div>
 
