--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -20,7 +20,7 @@
                 <div class="col"><li class="li" id="menuPreguntasFrecuentesServicioSocial">Servicio social</li></div>
                 <div class="col"><li class="li" id="menuPreguntasFrecuentesControlDocumental">Control documental</li></div>
                 <div class="col"><li class="li" id="menuPreguntasFrecuentesEscolares">Escolares</li></div>
-                <div class="col"><li class="li" id="menuPreguntasFrecuentesTutoria">Éxito estudiantil</li></div>
+                <div class="col"><li class="li" id="menuPreguntasFrecuentesExito">Éxito estudiantil</li></div>
                 </div>
             </ul>
 
@@ -279,7 +279,7 @@
 
               <!--ControlDocumental-->   
               <div class="bloque" id="bloquePreguntasFrecuentesControlDocumental">
-                  <div class="pf card border-0 py-3 px-3" id="" >
+                  <div class="pf card border-0 py-3 px-3" id="qeuddud" >
                     
                     <h6><b>¿Qué es una dictaminación de un documento?</b></h6>
                     <a>
@@ -288,7 +288,7 @@
 
                   </div>
 
-                  <div class="pf card border-0 py-3 px-3" id="" >
+                  <div class="pf card border-0 py-3 px-3" id="qdrl" >
                     
                     <h6><b>¿Qué documentos requiren legalización?</b></h6>
                     <a>
@@ -297,7 +297,7 @@
 
                   </div>
 
-                  <div class="pf card border-0 py-3 px-3" id="" >
+                  <div class="pf card border-0 py-3 px-3" id="dplud" >
                     
                     <h6><b>¿Dónde puede legalizar un documento?</b></h6>
                       Los documentos expedidos por autoridades de cualquier Estado de la República Mexicana, deberán legalizarse en la Secretaría General de Gobierno de los Estados.
@@ -316,7 +316,7 @@
 
                   </div>
 
-                  <div class="pf card border-0 py-3 px-3" id="" >
+                  <div class="pf card border-0 py-3 px-3" id="opprmd" >
                     
                     <h6><b>¿Otra persona puede recoger mi documentación?</b></h6>
 
@@ -343,7 +343,7 @@
               <!--Escolares-->
               <div class="bloque" id="bloquePreguntasFrecuentesEscolares">
 
-                <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="conses">
                     
                     <h6><b>Constancia de estudios</b></h6>
 
@@ -364,9 +364,9 @@
 
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="docrev">
                       
-                    <h6><b>Documentos para revalidación.</b></h6>
+                    <h6><b>Documentos para revalidación</b></h6>
 
                       Para alumnos con bachillerato en el extranjero es necesario realizar trámite de Revalidación sí es que aun no tiene Resolución de Revalidación de bachillerato.<br/><br/>
 
@@ -389,7 +389,7 @@
 
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="spaaucdtaralt">
                       
                   <h6><b>¿Se puede agregar a una constancia de termino algo referente a la titulación?</b></h6>
 
@@ -399,7 +399,7 @@
 
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="anrds">
                       
                   <h6><b>Alumno no recibe documento solicitado</b></h6>
 
@@ -409,7 +409,7 @@
 
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="spsudenf">
                       
                   <h6><b>Se puede solicitar un documento en físico</b></h6>
 
@@ -421,10 +421,10 @@
 
               </div>
 
-              <!--Tutoria-->   
-              <div class="bloque" id="bloquePreguntasFrecuentesTutoria">
+              <!--Éxito estudiantil-->   
+              <div class="bloque" id="bloquePreguntasFrecuentesExito">
 
-                <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="crucdl">
                   
                   <h6><b>¿Cómo realizo un cambio de Licenciatura?</b></h6>
                    <a>
@@ -438,7 +438,7 @@
                   </a>
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="cpveac">
                     
                   <h6><b>¿Cómo puedo ver el avance curricular?</b></h6>
                   
@@ -449,7 +449,7 @@
 
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="rdljsipl">
                     
                     <h6><b>Requisitos de la jornada Super intensiva para Licenciatura</b></h6>
                    
@@ -476,7 +476,7 @@
                     
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="ciasdiu">
                     
                   <h6><b>¿Cómo ingreso al Sistema de Información Universitaria (SIU)?</b></h6>
 
@@ -488,7 +488,7 @@
                   
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="">
+                <div class="pf card border-0 py-3 px-3" id="pdis">
                     
                     <h6><b>Pago de incorporación SEP</b></h6>
 
