--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -570,19 +570,17 @@
 
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Dominicana/validar_certificado.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/salvador/validar_certificado.pdf"
                                   target="_blank">¿Cómo validar un antecedente academico?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Dominicana/validar_identificacion.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/salvador/validar_identificacion.pdf"
                                   target="_blank">¿Cómo validar una identificación?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Dominicana/validar_comprobante.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/salvador/validar_comprobante.pdf"
                                   target="_blank">¿Cómo validar un Comprobante de domicilio?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Dominicana/validar_cartayanexo.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/salvador/validar_cartayanexo.pdf"
                                   target="_blank">¿Cómo validar una carta compromiso y anexo?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Dominicana/validar-cartamotivos.pdf"
-                                  target="_blank">¿Cómo validar una carta motivos?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Dominicana/validar-curriculum.pdf"
-                                  target="_blank">¿Cómo validar una carta curriculum?</a> 
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Dominicana/validar-laboral.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/salvador/validar-cartamotivos.pdf"
+                                  target="_blank">¿Cómo validar una carta motivos?</a>                                
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/salvador/validar-laboral.pdf"
                                   target="_blank">¿Cómo validar una constancia laboral?</a> 
                               </div>
                             </div>
@@ -650,7 +648,11 @@
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/España/validar-cartamotivos.pdf"
                                   target="_blank">¿Cómo validar una carta motivos?</a>
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/España/validar-laboral.pdf"
-                                  target="_blank">¿Cómo validar una constancia laboral?</a> 
+                                  target="_blank">¿Cómo validar una constancia laboral?</a>
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/España/validar-ingles.pdf"
+                                  target="_blank">¿Cómo validar una constancia de inglés?</a> 
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/España/validar-curriculum.pdf"
+                                  target="_blank">¿Cómo validar un curriculum?</a>  
                               </div>
                             </div>
                           </div>
@@ -715,8 +717,6 @@
                                   target="_blank">¿Cómo validar una carta compromiso y anexo?</a>
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Guatemala/validar-cartamotivos.pdf"
                                   target="_blank">¿Cómo validar una carta motivos?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Guatemala/validar-curriculum.pdf"
-                                  target="_blank">¿Cómo validar una carta curriculum?</a> 
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Guatemala/validar-laboral.pdf"
                                   target="_blank">¿Cómo validar una constancia laboral?</a> 
                               </div>
@@ -857,7 +857,7 @@
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Peru/validar-laboral.pdf"
                                   target="_blank">¿Cómo validar una constancia laboral?</a> 
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Peru/validar-ingles.pdf"
-                                  target="_blank">¿Cómo validar una constancia de ingles?</a> 
+                                  target="_blank">¿Cómo validar una constancia de inglés?</a> 
                               </div>
                             </div>
                           </div>
