--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -268,9 +268,8 @@
 
                 <div class="pf card border-0 py-3 px-3" id="SSUTEL" >
                   
-                  <h6><b>¿Puedo hacer el servicio social en Utel?</b></h6>
+                  <h6><b>¿Se puede hacer el servicio social en Utel?</b></h6>
                   <a>
-                    ¿Se puede hacer el servicio social en Utel?
                     Si, actualmente tenemos disponible el programa coach universitario, el cual consiste en brindar acompañamiento y apoyo a los alumnos inscritos  
                   </a>
 
@@ -426,7 +425,7 @@
 
                 <div class="pf card border-0 py-3 px-3" id="crucdl">
                   
-                  <h6><b>¿Cómo realizo un cambio de Licenciatura?</b></h6>
+                  <h6><b>¿Cómo se realiza un cambio de Licenciatura?</b></h6>
                    <a>
                     En este procedimiento el alumno solicita cambiar a una carrera diferente de la que inició, para realizar el trámite se necesita el formato de cambio de carrera firmado y el pago por la gestión del trámite con costo de $1500.<br/><br/>
 
