--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -1385,7 +1385,7 @@
                     <div class="border-3 card card-importante mx-3 mb-5">
                       <div class="card-body">
                         <strong class="">Importante</strong>
-                        <p class="card-text">
+                        <p class="card-text" style="text-align: justify;">
                           Es importante resaltar que los documentos que solicitamos ya no son requeridos para legalizar
                           en caso de ingresos regulares, solo aplica para
                           certificados parciales para trámites de equivalencia; en caso de que se requiera la
