--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -315,7 +315,7 @@
           <h4 class="text-center"><b>Tramites que realiza escolares</b></h4></br>
           
           <div class="row">
-            <div class="col-2">
+            <div class="col-3">
               <div class="col">
                 <strong>Tramite</strong></br>
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarCosto(2)">Utel HIGER</a>
@@ -324,14 +324,14 @@
 
             </div>
 
-            <div class="col-10">
+            <div class="col-9">
 
               <div class="tramites">
 
               <!--UTEL HIGER-->
               <div class="card border-0 mb-3 py-2 doc activo" style="display: block;" id="UtelHCostos">
                 
-                <img class="mx-auto d-block" src="img/escolares/Costos/Costos_mexico.png">
+                <img class="mx-auto d-block img-fluid" src="img/escolares/Costos/Costos_mexico.png">
                 
               </div> 
 
